<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="409dp"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/t_AppCreator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_creator"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:id="@+id/t_Name"
                android:layout_width="27dp"
                android:layout_height="wrap_content"
                android:layout_weight="4.2"
                android:text="@string/Name_products"
                android:textAlignment="center"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/t_Amount"
                android:layout_width="38dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.8"
                android:text="@string/Amount_products"
                android:textAlignment="center"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/t_Price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/Price_products"
                android:textAlignment="center"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">

            <CheckBox
                android:id="@+id/chb_Apple"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:checked="false"
                android:onClick="onCheckBox_Click"
                android:tag="1"
                android:text="@string/Product_apple"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/apple_Amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="10"
                android:inputType="number"
                android:textColor="#000000"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/apple_Price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="10"
                android:inputType="number"
                android:textColor="#000000"
                android:visibility="invisible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/chb_Carrot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:onClick="onCheckBox_Click"
                android:tag="2"
                android:text="@string/Product_carrot"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/carrot_Amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:textColor="#000000"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/carrot_Price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:textColor="#000000"
                android:visibility="invisible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/chb_Tomato"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:onClick="onCheckBox_Click"
                android:tag="3"
                android:text="@string/Product_tomato"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/tomato_Amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:textColor="#000000"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/tomato_Price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:visibility="invisible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/chb_Potato"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:onClick="onCheckBox_Click"
                android:tag="4"
                android:text="@string/Product_potato"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/potato_Amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:textColor="#000000"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/potato_Price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:textColor="#000000"
                android:visibility="invisible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_Calculate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onButton_Click"
                android:text="@string/Button_calculate" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>